--- a/ultimates/top.yaml
+++ b/ultimates/top.yaml
@@ -1695,6 +1695,19 @@ actions:
       For "sides", the cardinal edges of [boss]'s hitbox are safe. Check the diagrams for a better idea of where to stand.
       For the first [a:cosmo-arrow], have both tanks dodge from separate starting positions, and have the rest of the party dodge from the same starting position. This way everyone will already be in position for [a:cosmo-dive] at the end.
       For the second [a:cosmo-arrow], have 2 players per starting position and dodge towards opposite sides during the "sides" step of the dodge. See the diagram for an illustration. Doing this will automatically have every player spread for [a:cosmo-wave-cannon].
+    strategies:
+      cosmo-arrow-in:
+        name: In First (LPDU)
+        description: How LPDU resolves the "in first" pattern during the second [a:cosmo-arrow]. For the first one you don't need to spread, so pick any position and follow that movement.
+      cosmo-arrow-out:
+        name: Out First (LPDU)
+        description: How LPDU resolves the "out first" pattern during the second [a:cosmo-arrow]. For the first one you don't need to spread, so pick any position and follow that movement.
+      cosmo-arrow-in-only:
+        name: In Only
+        description: Demonstrates the movement of the inner AoEs in isolation. Does not appear like this in the game.
+      cosmo-arrow-out-only:
+        name: Out Only
+        description: Demonstrates the movement of the outer AoEs in isolation. Does not appear like this in the game.
     children:
       - at: 1998
         id: cosmo-arrow-hit-initial
@@ -2047,10 +2060,11 @@ graphing:
     double-tower-gradient: "radial-gradient(0 #00000000 84% #00000000 87% #f1ffff 89% #f1ffff 92% #00000000 95% #f1ffff 97% #f1ffff 100% #00000000)"
     tower-filled-gradient: "radial-gradient(0 #c2bf9288 92% #c2bf92 95% #f1ffff 97% #f1ffff 100% #00000000)"
     blaster-gradient: "radial-gradient(0 #0e161d00 94% #0e161d 100% #0e161d)"
-    aoe-gradient: "radial-gradient(0 #fcca6e55 65% #fcca6e55 100% #fcca6ecc)"
-    spread-gradient: "radial-gradient(0 #fcae6e55 65% #fcae6e55 100% #fcae6ecc)"
+    aoe-gradient: "radial-gradient(0 #8a080855 10% #8a080855 100% #fcca6ecc)"
     wc-gradient-line: "linear-gradient(0 #fcfcfc 15% #8de8fb 40% #1f325a 60% #1f325a 85% #8de8fb 100% #fcfcfc)"
+    exasquare-gradient: "rectangle-gradient(0 #ebd810cc 30% #2e2a0066 97% #6e6820cc 100% #ebd810cc)"
     wc-gradient: "radial-gradient(0 #1f325a 20% #1f325a 80% #8de8fb 90% #fcfcfc 100% #fcfcfc)"
+    wc-p6-gradient: "radial-gradient(0 #5a571f 20% #5a501f 80% #fbec8d 90% #fcfcfc 100% #fcfcfc)"
     wave-repeater-gradient: "radial-gradient(80% #407af499 100% #88d8fa)"
     sniper-gradient: "radial-gradient(0% #cfacdc 70% #080d1daa)"
     hp-sniper-gradient: "radial-gradient(0% #fffdff 30% #fffdff55 70% #fffdff55 100% #fffdff)"
@@ -2127,6 +2141,12 @@ graphing:
       scale: 0
       visible: false
       shadow: false
+    exasquare:
+      type: rectangle
+      size: [23, 200]
+      color: url(#exasquare-gradient)
+      visible: false
+      shadow: false
     label:
       type: rectangle
       planar: false
@@ -2137,9 +2157,16 @@ graphing:
       shadow: false
     wave-cannon:
       type: rectangle
-      size: [15, 200]
+      size: [20, 200]
       origin: [0.5, 0]
       color: url(#wc-gradient)
+      scale: [0, 1]
+      shadow: false
+    p6-wc:
+      type: rectangle
+      size: [20, 150]
+      origin: [0.5, 0]
+      color: url(#wc-p6-gradient)
       scale: [0, 1]
       shadow: false
     wc-cone:
@@ -2160,7 +2187,7 @@ graphing:
     spread:
       type: ellipse
       size: 60
-      color: url(#spread-gradient)
+      color: url(#aoe-gradient)
       scale: 0
       shadow: false
     glitch-link:
@@ -4355,3 +4382,310 @@ graphing:
         circle#hello-[near, far]-3: { visible: true }
         [T2, R1]: { status: [quickening-dynamis:2] }
       - circle#hello-[near, far]-3: { visible: false }
+    cosmo-arrow-in-only:
+      - arena: { image: /images/arenas/top-p6.avif }
+        boss: { size: 115, opacity: 0.5 }
+        rect#in-1: { size: [46, 200], scale: 1 }
+        rect#in-2: { size: [200, 46], scale: 1 }
+        exasquare#v1: { x: 80.5, y: -90 }
+        exasquare#v2: { x: 57.5, y: -90 }
+        exasquare#v3: { x: 34.5, y: -90 }
+        exasquare#v6: { x: 34.5, y: 90 }
+        exasquare#v7: { x: 57.5, y: 90 }
+        exasquare#v8: { x: 80.5, y: 90 }
+        exasquare#h1: { x: 80.5, y: 0, rotate: 90 }
+        exasquare#h2: { x: 57.5, y: 0, rotate: 90 }
+        exasquare#h3: { x: 34.5, y: 0, rotate: 90 }
+        exasquare#h6: { x: 34.5, y: 180, rotate: 90 }
+        exasquare#h7: { x: 57.5, y: 180, rotate: 90 }
+        exasquare#h8: { x: 80.5, y: 180, rotate: 90 }
+        marker-a: [63, 0]
+        marker-1: [63, 45]
+        marker-b: [63, 90]
+        marker-2: [63, 135]
+        marker-c: [63, 180]
+        marker-3: [63, -135]
+        marker-d: [63, -90]
+        marker-4: [63, -45]
+      - rect#in-*: { visible: true }
+      - rect#in-*: { visible: false }
+        exasquare#[h,v][3,6]: { visible: true }
+      - exasquare#[h,v][3,6]: { visible: false }
+        exasquare#[h,v][2,7]: { visible: true }
+      - exasquare#[h,v][2,7]: { visible: false }
+        exasquare#[h,v][1,8]: { visible: true }
+    cosmo-arrow-out-only:
+      - arena: { image: /images/arenas/top-p6.avif }
+        boss: { size: 115, opacity: 0.5 }
+        rect#out-1: { x: 69, y: 0, size: [200, 46], scale: 1 }
+        rect#out-2: { x: 69, y: 180, size: [200, 46], scale: 1 }
+        rect#out-3: { x: 69, y: 90, size: [46, 200], scale: 1 }
+        rect#out-4: { x: 69, y: -90, size: [46, 200], scale: 1 }
+        exasquare#v1: { x: 80.5, y: -90 }
+        exasquare#v2: { x: 57.5, y: -90 }
+        exasquare#v3: { x: 34.5, y: -90 }
+        exasquare#v4: { x: 11.5, y: -90 }
+        exasquare#v5: { x: 11.5, y: 90 }
+        exasquare#v6: { x: 34.5, y: 90 }
+        exasquare#v7: { x: 57.5, y: 90 }
+        exasquare#v8: { x: 80.5, y: 90 }
+        exasquare#h1: { x: 80.5, y: 0, rotate: 90 }
+        exasquare#h2: { x: 57.5, y: 0, rotate: 90 }
+        exasquare#h3: { x: 34.5, y: 0, rotate: 90 }
+        exasquare#h4: { x: 11.5, y: 0, rotate: 90 }
+        exasquare#h5: { x: 11.5, y: 180, rotate: 90 }
+        exasquare#h6: { x: 34.5, y: 180, rotate: 90 }
+        exasquare#h7: { x: 57.5, y: 180, rotate: 90 }
+        exasquare#h8: { x: 80.5, y: 180, rotate: 90 }
+        marker-a: [63, 0]
+        marker-1: [63, 45]
+        marker-b: [63, 90]
+        marker-2: [63, 135]
+        marker-c: [63, 180]
+        marker-3: [63, -135]
+        marker-d: [63, -90]
+        marker-4: [63, -45]
+      - rect#out-*: { visible: true }
+      - rect#out-*: { visible: false }
+        exasquare#[h,v][3,6]: { visible: true }
+      - exasquare#[h,v][3,6]: { visible: false }
+        exasquare#[h,v][4,5]: { visible: true }
+      - {}
+      - exasquare#[h,v][4,5]: { visible: false }
+        exasquare#[h,v][3,6]: { visible: true }
+      - exasquare#[h,v][3,6]: { visible: false }
+        exasquare#[h,v][2,7]: { visible: true }
+      - exasquare#[h,v][2,7]: { visible: false }
+        exasquare#[h,v][1,8]: { visible: true }
+    cosmo-arrow-in:
+      - arena: { image: /images/arenas/top-p6.avif }
+        boss: { size: 115, opacity: 0.5 }
+        rect#in-1: { size: [46, 200], scale: 1 }
+        rect#in-2: { size: [200, 46], scale: 1 }
+        rect#out-1: { x: 69, y: 0, size: [200, 46], scale: 1 }
+        rect#out-2: { x: 69, y: 180, size: [200, 46], scale: 1 }
+        rect#out-3: { x: 69, y: 90, size: [46, 200], scale: 1 }
+        rect#out-4: { x: 69, y: -90, size: [46, 200], scale: 1 }
+        p6-wc#1: { rotate: T1 }
+        p6-wc#2: { rotate: M1 }
+        p6-wc#3: { rotate: R2 }
+        p6-wc#4: { rotate: H2 }
+        p6-wc#5: { rotate: M2 }
+        p6-wc#6: { rotate: T2 }
+        p6-wc#7: { rotate: H1 }
+        p6-wc#8: { rotate: R1 }
+        p6-wc#9: { size: [45, 150], rotate: M1 }
+        exasquare#v1: { x: 80.5, y: -90 }
+        exasquare#v2: { x: 57.5, y: -90 }
+        exasquare#v3: { x: 34.5, y: -90 }
+        exasquare#v4: { x: 11.5, y: -90 }
+        exasquare#v5: { x: 11.5, y: 90 }
+        exasquare#v6: { x: 34.5, y: 90 }
+        exasquare#v7: { x: 57.5, y: 90 }
+        exasquare#v8: { x: 80.5, y: 90 }
+        exasquare#h1: { x: 80.5, y: 0, rotate: 90 }
+        exasquare#h2: { x: 57.5, y: 0, rotate: 90 }
+        exasquare#h3: { x: 34.5, y: 0, rotate: 90 }
+        exasquare#h4: { x: 11.5, y: 0, rotate: 90 }
+        exasquare#h5: { x: 11.5, y: 180, rotate: 90 }
+        exasquare#h6: { x: 34.5, y: 180, rotate: 90 }
+        exasquare#h7: { x: 57.5, y: 180, rotate: 90 }
+        exasquare#h8: { x: 80.5, y: 180, rotate: 90 }
+        marker-a: [63, 0]
+        marker-1: [63, 45]
+        marker-b: [63, 90]
+        marker-2: [63, 135]
+        marker-c: [63, 180]
+        marker-3: [63, -135]
+        marker-d: [63, -90]
+        marker-4: [63, -45]
+        T1: [44, -40]
+        R1: [44, 50]
+        T2: [44, 40]
+        M2: [44, 130]
+        M1: [44, -130]
+        R2: [44, -50]
+        H2: [44, 140]
+        H1: [44, -140]
+        cast: { text: Cosmo Arrow, progress: 0 }
+      - rect#in-*: { visible: true }
+        cast: { progress: 0.333 }
+      - rect#out-*: { visible: true }
+        cast: { progress: 0.666 }
+      - rect#in-*: { visible: false }
+        cast: { progress: 1, visible: false }
+        players: { x: 20 }
+      - rect#out-*: { visible: false }
+        exasquare#[h,v][3,6]: { visible: true }
+      - exasquare#[h,v][2,7]: { visible: true }
+        cast: { text: Wave Cannon, progress: 0 }
+      - exasquare#[h,v][2,3,6,7]: { visible: false }
+        exasquare#[h,v][1,4,5,8]: { visible: true }
+        cast: { visible: true }
+        players: { x: 44 }
+      - exasquare#[h,v][1,8]: { visible: false }
+        H1: [70, -156]
+        M1: [71, -113]
+        R2: [72, -64]
+        T1: [66, -27]
+        T2: [67, 24]
+        R1: [65, 63]
+        M2: [63, 115]
+        H2: [71, 157]
+        cast: { progress: 0.2 }
+      - exasquare#[h,v][4,5]: { visible: false }
+        exasquare#[h,v][3,6]: { visible: true }
+        M1: [67, -104]
+        R2: [68, -73]
+        T1: [68, -16]
+        T2: [68, 17]
+        R1: [64, 72]
+        M2: [63, 103]
+        H2: [63, 167]
+        H1: [63, -163]
+        cast: { progress: 0.4 }
+      - exasquare#[h,v][3,6]: { visible: false }
+        exasquare#[h,v][2,7]: { visible: true }
+        p6-wc#[1..4]: { scale: 1 }
+        M1: [44, -106]
+        R2: [44, -66]
+        T1: [44, -26]
+        T2: [44, 22]
+        R1: [44, 68]
+        M2: [44, 109]
+        H2: [44, 157]
+        H1: [44, -158]
+        cast: { progress: 0.6 }
+      - exasquare#[h,v][2,7]: { visible: false }
+        exasquare#[h,v][1,8]: { visible: true }
+        p6-wc#[1..4]: { scale: [0, 1] }
+        p6-wc#[5..8]: { scale: 1, rotate: null }
+        cast: { progress: 0.8 }
+      - p6-wc#[5..8]: { scale: [0, 1] }
+        exasquare#[h,v][1,8]: { visible: false }
+        H2: [52, -169]
+        R2: [46, -173]
+        R1: [47, -177]
+        M2: [47, 175]
+        T2: [19, -175]
+        T1: [17, 171]
+        M1: [53, -179]
+        H1: [51, 174]
+        cast: { progress: 0.9 }
+      - p6-wc#9: { scale: 1 }
+        cast: { progress: 1, visible: false }
+    cosmo-arrow-out:
+      - arena: { image: /images/arenas/top-p6.avif }
+        boss: { size: 115, opacity: 0.5 }
+        rect#in-1: { size: [46, 200], scale: 1 }
+        rect#in-2: { size: [200, 46], scale: 1 }
+        rect#out-1: { x: 69, y: 0, size: [200, 46], scale: 1 }
+        rect#out-2: { x: 69, y: 180, size: [200, 46], scale: 1 }
+        rect#out-3: { x: 69, y: 90, size: [46, 200], scale: 1 }
+        rect#out-4: { x: 69, y: -90, size: [46, 200], scale: 1 }
+        p6-wc#1: { rotate: T1 }
+        p6-wc#2: { rotate: M1 }
+        p6-wc#3: { rotate: R2 }
+        p6-wc#4: { rotate: H2 }
+        p6-wc#5: { rotate: M2 }
+        p6-wc#6: { rotate: T2 }
+        p6-wc#7: { rotate: H1 }
+        p6-wc#8: { rotate: R1 }
+        p6-wc#9: { size: [45, 150], rotate: M1 }
+        exasquare#v1: { x: 80.5, y: -90 }
+        exasquare#v2: { x: 57.5, y: -90 }
+        exasquare#v3: { x: 34.5, y: -90 }
+        exasquare#v4: { x: 11.5, y: -90 }
+        exasquare#v5: { x: 11.5, y: 90 }
+        exasquare#v6: { x: 34.5, y: 90 }
+        exasquare#v7: { x: 57.5, y: 90 }
+        exasquare#v8: { x: 80.5, y: 90 }
+        exasquare#h1: { x: 80.5, y: 0, rotate: 90 }
+        exasquare#h2: { x: 57.5, y: 0, rotate: 90 }
+        exasquare#h3: { x: 34.5, y: 0, rotate: 90 }
+        exasquare#h4: { x: 11.5, y: 0, rotate: 90 }
+        exasquare#h5: { x: 11.5, y: 180, rotate: 90 }
+        exasquare#h6: { x: 34.5, y: 180, rotate: 90 }
+        exasquare#h7: { x: 57.5, y: 180, rotate: 90 }
+        exasquare#h8: { x: 80.5, y: 180, rotate: 90 }
+        marker-a: [63, 0]
+        marker-1: [63, 45]
+        marker-b: [63, 90]
+        marker-2: [63, 135]
+        marker-c: [63, 180]
+        marker-3: [63, -135]
+        marker-d: [63, -90]
+        marker-4: [63, -45]
+        T1: [44, -40]
+        R1: [44, 50]
+        T2: [44, 40]
+        M2: [44, 130]
+        M1: [44, -130]
+        R2: [44, -50]
+        H2: [44, 140]
+        H1: [44, -140]
+        cast: { text: Cosmo Arrow, progress: 0 }
+      - rect#out-*: { visible: true }
+        cast: { progress: 0.333 }
+      - rect#in-*: { visible: true }
+        cast: { progress: 0.666 }
+      - rect#out-*: { visible: false }
+        cast: { progress: 1, visible: false }
+        H1: [73, -138]
+        M1: [73, -133]
+        R2: [73, -47]
+        T1: [73, -42]
+        T2: [73, 42]
+        R1: [73, 47]
+        M2: [73, 133]
+        H2: [73, 138]
+      - rect#in-*: { visible: false }
+        exasquare#[h,v][3,6]: { visible: true }
+      - exasquare#[h,v][4,5]: { visible: true }
+        cast: { text: Wave Cannon, progress: 0 }
+      - exasquare#[h,v][3,6]: { visible: false }
+        exasquare#[h,v][2,7]: { visible: true }
+        cast: { visible: true }
+        players: { x: 44 }
+      - exasquare#[h,v][2,4,5,7]: { visible: false }
+        exasquare#[h,v][1,3,6,8]: { visible: true }
+        M1: [67, -104]
+        R2: [68, -73]
+        T1: [68, -16]
+        T2: [68, 17]
+        R1: [64, 72]
+        M2: [63, 103]
+        H2: [63, 167]
+        H1: [63, -163]
+        cast: { progress: 0.2 }
+      - exasquare#[h,v][1,3,6,8]: { visible: false }
+        exasquare#[h,v][2,7]: { visible: true }
+        cast: { progress: 0.4 }
+        M1: [44, -106]
+        R2: [44, -66]
+        T1: [44, -26]
+        T2: [44, 22]
+        R1: [44, 68]
+        M2: [44, 109]
+        H2: [44, 157]
+        H1: [44, -158]
+      - exasquare#[h,v][2,7]: { visible: false }
+        exasquare#[h,v][1,8]: { visible: true }
+        p6-wc#[1..4]: { scale: 1 }
+        cast: { progress: 0.6 }
+      - exasquare#[h,v][1,8]: { visible: false }
+        p6-wc#[1..4]: { scale: [0, 1] }
+        p6-wc#[5..8]: { scale: 1, rotate: null }
+        cast: { progress: 0.8 }
+      - p6-wc#[5..8]: { scale: [0, 1] }
+        H2: [52, -169]
+        R2: [46, -173]
+        R1: [47, -177]
+        M2: [47, 175]
+        T2: [19, -175]
+        T1: [17, 171]
+        M1: [53, -179]
+        H1: [51, 174]
+        cast: { progress: 0.9 }
+      - p6-wc#9: { scale: 1 }
+        cast: { progress: 1, visible: false }
