--- a/ultimates/top.yaml
+++ b/ultimates/top.yaml
@@ -1,12 +1,11 @@
 id: 30124
 patch: "6.31"
 date: 2023-01-24
-modified: 2024-03-08
+modified: 2024-05-19
 by:
   id: 27637301
   role: author
 boss: Alpha Omega
-wip: true
 HP: 0
 description: An alternate retelling of the Omega raid storyline in which Omega successfully ascertains and harnesses what lies at the heart of a mortal's strength.
 status:
@@ -1865,6 +1864,10 @@ actions:
       Once the [i:caster] limit break has finished, have your [i:pranged] use their limit break to destroy the remaining 2 Cosmo Meteors.
       Flares will appear here. One of them should go north or south while the other two should go east and west. The party should stack on whichever clock spot belongs to the [i:pranged] during this mechanic (either north or south).
       **Be aware that your [i:pranged] will be casting their limit break during this part, so they'll be utterly immobile. If they're a flare, the party must therefore adjust and stack on the opposite clock spot, as the [i:pranged] player cannot move away.**
+    strategies:
+      cosmo-meteor:
+        name: LPDU
+        description: MT and the physical ranged swap clock spots. One of the healers goes in after the baited AoEs resolve so they can reach everyone with heals.
     children:
       - at: 44
         id: cosmo-meteor-baits
@@ -2060,6 +2063,8 @@ timeline:
 graphing:
   coordinate-system: polar
   defs:
+    friendly-aoe: "radial-gradient(0 #1ea2c955 100% #03c2fc99)"
+    proximity-aoe: "radial-gradient(0 #d47528 90% #d4752855 100% #d4752800)"
     tower-gradient: "radial-gradient(0 #00000000 92% #00000000 95% #f1ffff 97% #f1ffff 100% #00000000)"
     double-tower-gradient: "radial-gradient(0 #00000000 84% #00000000 87% #f1ffff 89% #f1ffff 92% #00000000 95% #f1ffff 97% #f1ffff 100% #00000000)"
     tower-filled-gradient: "radial-gradient(0 #c2bf9288 92% #c2bf92 95% #f1ffff 97% #f1ffff 100% #00000000)"
@@ -2080,7 +2085,7 @@ graphing:
     close-gradient: "radial-gradient(0% #a3c5d1 100% #39a5cc)"
     monitor-gradient: "linear-gradient(0% #88e7f7 2% #3a8efc 100% transparent)"
     monitor-boom-gradient: "radial-gradient(0% #dbeeff 95% #dbeeff 100% #a1ebff)"
-    hw-background: "image(/images/hello-world.svg)"
+    hw-background: "image(/images/other/hello-world.svg)"
   elements:
     arena:
       type: image
@@ -2164,6 +2169,7 @@ graphing:
       size: [20, 200]
       origin: [0.5, 0]
       color: url(#wc-gradient)
+      opacity: 0.7
       scale: [0, 1]
       shadow: false
     p6-wc:
@@ -3069,7 +3075,7 @@ graphing:
         circle#4: { x: 63, y: 180, scale: 0, coordinate-system: polar }
         circle#5: { x: 63, y: -90, scale: 0, coordinate-system: polar }
         circle#6: { x: 70, y: -45, scale: 0.9, coordinate-system: polar }
-        circle#7: { x: 88, y: -135, scale: 0.9, coordinate-system: polar }
+        circle#7: { x: 70, y: -135, scale: 0.9, coordinate-system: polar }
       - circle#1..5: { scale: 2, visible: true }
         circle#6..7: { visible: true }
       - circle#1..7: { visible: false }
@@ -4801,3 +4807,95 @@ graphing:
         circle#5: { visible: false }
         circle#exa-[2-2,3-1,4-3]: { visible: false }
         circle#exa-[3-2,4-1]: { visible: true }
+    cosmo-meteor:
+      - arena: { image: /images/arenas/top-p6.avif }
+        boss: { size: 115, opacity: 0.5 }
+        boss#comet-[1..6]: { visible: false, size: 20, rotate: boss }
+        boss#meteor-[1..2]: { visible: false, size: 25, rotate: boss }
+        boss#comet-1: [60, 90]
+        boss#comet-2: [60, -90]
+        boss#comet-3: [60, -145]
+        boss#comet-4: [60, 145]
+        boss#comet-5: [60, 35]
+        boss#comet-6: [60, -35]
+        boss#meteor-1: [50, 0]
+        boss#meteor-2: [50, 180]
+        circle#bait: { size: 95, scale: 0, visible: true }
+        circle#lb3: { size: 140, scale: 0, visible: true, color: url(#friendly-aoe) }
+        rect#lb3: { attach: R1, rotate: boss, size: [40, 200], origin: [0.5, 0], scale: 0, visible: true, color: url(#friendly-aoe) }
+        circle#spread-[1..8]: { size: 40, color: "#66231f99" }
+        circle#spread-1: { attach: T1 }
+        circle#spread-2: { attach: H1 }
+        circle#spread-3: { attach: M2 }
+        circle#spread-4: { attach: R1 }
+        circle#spread-5: { attach: T2 }
+        circle#spread-6: { attach: M1 }
+        circle#spread-7: { attach: H2 }
+        circle#spread-8: { attach: R2 }
+        circle#stack: { attach: H2, size: 60, color: "#66231f99" }
+        circle#proximity-[1..3]: { size: 150, color: url(#proximity-aoe) }
+        circle#proximity-1: { attach: R2 }
+        circle#proximity-2: { attach: M2 }
+        circle#proximity-3: { attach: T1 }
+        flare#1: { attach: R2 }
+        flare#2: { attach: M2 }
+        flare#3: { attach: T1 }
+        marker-a: [63, 0]
+        marker-1: [63, 45]
+        marker-b: [63, 90]
+        marker-2: [63, 135]
+        marker-c: [63, 180]
+        marker-3: [63, -135]
+        marker-d: [63, -90]
+        marker-4: [63, -45]
+        T1: [37, -70]
+        T2: [76, -17]
+        R2: [43, 32]
+        R1: [47, 34]
+        M2: [50, 36]
+        M1: [38, 34]
+        H1: [34, 32]
+        H2: [31, 29]
+        cast: { text: Cosmo Meteor, progress: 0 }
+        label: { text: Caster uses LB3..., x: 0, y: -90, visible: false }
+      - players: [0, 0]
+        cast: { progress: 0.5 }
+      - cast: { progress: 1, visible: false }
+        circle#bait: { scale: 1 }
+      - H2: [60, 90]
+        H1: [60, -90]
+        M1: [60, -135]
+        M2: [60, 135]
+        R1: [60, 0]
+        R2: [60, 45]
+        T2: [60, 180]
+        T1: [60, -45]
+      - circle#bait: { visible: false }
+        boss#comet-*: { visible: true }
+        boss#meteor-*: { visible: true }
+        H2: [0, 0]
+        label: { visible: true }
+        circle#lb3: { scale: 1 }
+        circle#spread-[1..4]: { visible: true }
+      - circle#spread-[1..4]: { visible: false }
+      - circle#lb3: { visible: false }
+        label: { visible: false }
+        boss#comet-*: { visible: false }
+        circle#spread-[5..8]: { visible: true }
+      - circle#spread-[5..8]: { visible: false }
+        boss#comet-*: { visible: false }
+      - rect#lb3: { scale: 1 }
+        label: { text: Pranged uses LB3..., visible: true }
+        flare#*: { visible: true }
+      - R2: [86, 89]
+        M2: [83, -180]
+        T1: [88, -89]
+        [H2,T2,M1,H1]: [60, 0]
+      - circle#stack: { visible: true }
+        circle#proximity-*: { visible: true }
+        rect#lb3: { visible: false }
+        label: { visible: false }
+        flare#*: { visible: false }
+        boss#meteor-*: { visible: false }
+      - circle#proximity-*: { visible: false }
+        circle#stack: { visible: false }
