--- a/calendar.yaml
+++ b/calendar.yaml
@@ -540,6 +540,7 @@
   at: 2024-05-16 11:00:00
   url: https://sqex.to/oX18H
 - name: Fall Guys Collaboration
+  type: event
   color: "#7d2885"
   from: 2024-05-23
   to: 2024-06-10
